flaresolverr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
    part-of: jackett
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
      part-of: jackett
  template:
    metadata:
      labels:
        app: flaresolverr
        part-of: jackett
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - name: flaresolverr
          containerPort: 8191
