jackett-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  labels:
    app: jackett
    part-of: jackett
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
      part-of: jackett
  template:
    metadata:
      labels:
        app: jackett
        part-of: jackett
    spec:
      serviceAccountName: jackett
      containers:
      - name: jackett
#        securityContext:
#          capabilities:
#            add:
#              - NET_ADMIN
        image: dyonr/jackettvpn:latest
        ports:
        - name: jackett
          containerPort: 9117
        volumeMounts:
        - name: jackett
          mountPath: /config
#        - name: dev-net-tun
#          mountPath: /dev/net/tun
        - name: jackett-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
        readinessProbe:
          tcpSocket:
            port: jackett
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: jackett
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: jackett
        persistentVolumeClaim:
          claimName: jackett
      - name: jackett-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "jackett"
#      - name: dev-net-tun
#        hostPath:
#          path: /dev/net/tun
