flaresolverr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  type: ClusterIP
  ports:
    - port: 8191
      targetPort: flaresolverr
  selector:
    app: flaresolverr
    part-of: jackett
